Add compile from local